# volvo-boot-camp-2022-smokey-lab

./: .gitignore  CMakeLists.txt  build.sh  cmake_make_readme.txt  input_handler_app  ip  main.cpp  vcan_start.sh
Multithreading/: CMakeLists.txt  test2.cpp
Multithreading/src/: socketcan.cpp
app/: CMakeLists.txt
app/emulator/: CMakeLists.txt  main.cpp
app/emulator/include/: Emulator.h  emulator.h
app/emulator/src/: Emulator.cpp  emulator.cpp
app/input_handler/: CMakeLists.txt  main.cpp
app/input_handler/include/: canmessage.h
app/input_handler/src/: canmessage.cpp
app/out_display/: CMakeLists.txt
app/output_display/: CMakeLists.txt
app/output_display/src/: your_stuff.cpp
common/: common_datatypes.h
common/libuserinputcheck/: check_input.h
docs/: CAN Signal.drawio  CAN Signal.xml  Untitled Diagram.drawio  User Case Diagram  User State Diagram  readme.md  readme.txt
docs/video_presentation/: CMake_build.mkv  setup.mkv
emulator/: CMakeLists.txt  main.cpp
emulator/include/: Emulator.h
emulator/src/: Emulator.cpp
example/: CMakeLists.txt
example/can_reader/: CMakeLists.txt  can_read.cpp
example/can_writer/: CMakeLists.txt  can_write.cpp
example/emulator/: CMakeLists.txt
example/input_handler/: CMakeLists.txt  input_handler.cpp
include/: Gearbox.h  can_message.h  checkInput.h  init_socketcan.h
libs/: CMakeLists.txt
libs/libcanio/: CMakeLists.txt
libs/libcanio/include/: can_common.h  canmessage.h  socketcansetup.h
libs/libcanio/src/: canmessage.cpp  socketcansetup.cpp
libs/libcanreadwrite/: CMakeLists.txt  main.cpp
libs/libcanreadwrite/include/: canmessage.h  init_socketcan.h  socketcansetup.h
libs/libcheckframeid/include/: check_can_frame_id.h
libs/libcheckframeid/src/: check_can_frame_id.cpp
libs/libemulator/: CMakeLists.txt  main.cpp  main.cpp.old
libs/libemulator/include/: Emulator.h
libs/libemulator/src/: Emulator.cpp  canmessage.cpp
libs/libinputhandler/: CMakeLists.txt
libs/libinputhandler/include/: canmessage.h  socketcansetup.h
libs/libinputhandler/src/: canmessage.cpp  checkinput.cpp  socketcan.cpp  socketcansetup.cpp
libs/libuserinput/: CMakeLists.txt
libs/libuserinputcheck/: CMakeLists.txt  check_input.h
libs/socketcan-cpp-master/: CMakeLists.txt
libs/socketcan-cpp-master/src/: socketcan_cpp.cpp
msg_handler/: .gitignore  CMakeLists.txt  main.cpp
src/: Gearbox.cpp  can_message.cpp  checkInput.cpp  gearbox.cpp  init_socketcan.cpp  main.cpp
